fix bug on iOS record_form file input overflow

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -667,6 +667,10 @@ video {
   margin-top: auto;
   margin-bottom: auto;
 }
+.mx-8 {
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
 .mb-4 {
   margin-bottom: 1rem;
 }
@@ -879,6 +883,15 @@ video {
   width: -moz-fit-content;
   width: fit-content;
 }
+.w-3 {
+  width: 0.75rem;
+}
+.w-0 {
+  width: 0px;
+}
+.w-1 {
+  width: 0.25rem;
+}
 .min-w-0 {
   min-width: 0px;
 }
@@ -905,6 +918,9 @@ video {
 }
 .max-w-\[32px\] {
   max-width: 32px;
+}
+.max-w-0 {
+  max-width: 0rem;
 }
 .flex-1 {
   flex: 1 1 0%;
@@ -2026,6 +2042,14 @@ video {
 .text-slate-200 {
   --tw-text-opacity: 1;
   color: rgb(226 232 240 / var(--tw-text-opacity));
+}
+.text-cyan-300 {
+  --tw-text-opacity: 1;
+  color: rgb(103 232 249 / var(--tw-text-opacity));
+}
+.text-slate-800 {
+  --tw-text-opacity: 1;
+  color: rgb(30 41 59 / var(--tw-text-opacity));
 }
 .underline {
   text-decoration-line: underline;
